Fix horizontal overflow

--- a/public/style.css
+++ b/public/style.css
@@ -75,6 +75,7 @@ html, body {
 
 .chat-window {
   overflow: auto;
+  overflow: hidden auto;
   display:  flex;
   flex-direction: column-reverse;
   flex: 1 1 95%;
